--- a/css/competences.css
+++ b/css/competences.css
@@ -1,8 +1,4 @@
-@media screen and (max-width : 300px) {
-    body {
-        font-size: xx-small;
-    }
-}
+
 @media screen and (min-width : 301px)and (max-width : 576px){
     body {
         font-size: x-small;
@@ -20,8 +16,9 @@ body {
 body{
     background-image : url("https://images8.alphacoders.com/403/thumb-1920-403441.gif");
     background-size: cover;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-position: center;
+    margin-bottom: 100px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .menu {
@@ -65,6 +62,7 @@ header {
     background-attachment: fixed;
     background-color: #2b2929;
     text-align: center;
+    padding: 10px ;
 }
 footer {
     margin-top: 10%;
@@ -72,6 +70,9 @@ footer {
     padding : 10px ;
     text-align: center;
     color :#b4b4b4 ;
+    position: fixed ;
+    bottom : 0 ;
+    width : 100% ;
     
 }
 h2 {
@@ -116,7 +117,7 @@ ul li {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
     background: linear-gradient(to right,#92dcde, #00e3e7, #20B2AA);
-    padding: 5px 5px 5px 5px;
+    padding: 6px 15px 6px 15px;
     border : none ;
     border-radius: 15px ;
     box-shadow: 0 0 10px rgba(0,0,0,0.3);
