--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,4 @@
-@media screen and (max-width : 300px) {
-    body {
-        font-size: xx-small;
-    }
-}
+
 @media screen and (min-width : 301px)and (max-width : 576px){
     body {
         font-size: x-small;
@@ -17,7 +13,7 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-image : url("https://images8.alphacoders.com/403/thumb-1920-403441.gif");
     background-size: cover;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-position: center;
 }
 .menu {
@@ -109,6 +105,7 @@ header {
     background-attachment: fixed;
     background-color: #2b2929;
     text-align: center;
+    padding: 10px ;
 }
 footer {
     margin-top: 10%;
@@ -118,17 +115,20 @@ footer {
     color :#b4b4b4 ;
     margin-bottom :0 ;
     bottom: 0;
+    position : fixed ;
+    width : 100% ;
     
 }
 body {
     margin:0;
+    margin-bottom: 100px;
   }
 
   .button {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
     background: linear-gradient(to right,#92dcde, #00e3e7, #20B2AA);
-    padding: 5px 5px 5px 5px;
+    padding: 6px 15px 6px 15px;
     border : none ;
     border-radius: 15px ;
     box-shadow: 0 0 10px rgba(0,0,0,0.3);
