--- a/css/projets.css
+++ b/css/projets.css
@@ -1,8 +1,4 @@
-@media screen and (max-width : 300px) {
-  body {
-      font-size: xx-small;
-  }
-}
+
 @media screen and (min-width : 301px)and (max-width : 576px){
   body {
       font-size: x-small;
@@ -73,6 +69,7 @@ header {
     background-attachment: fixed;
     background-color: #2b2929;
     text-align: center;
+    padding: 10px ;
 }
 footer {
   color :#b4b4b4 ;
@@ -172,7 +169,7 @@ h2 {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
     background: linear-gradient(to right,#92dcde, #00e3e7, #20B2AA);
-    padding: 5px 5px 5px 5px;
+    padding: 6px 15px 6px 15px;
     border : none ;
     border-radius: 15px ;
     box-shadow: 0 0 10px rgba(0,0,0,0.3);
